fixed Link not working on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -333,7 +333,7 @@ a {
     }
     ul {
         font-size: 30px;
-        margin-top: 45px;
+        margin-top: -41px;
     }
     .logo {
         font-size: 35px;
